--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             </label>
                         </p>
                         <p>
-                            <input type="submit" value="Sign in">
+                            <input class="o-button-reset c-button" type="submit" value="Sign in">
                         </p>
                         <p>
                             <a href="#!">
